--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 
 /* Brand Name (Text Button) */
 .navbar .brand-name {
-    font-family: "Dancing Script", cursive;
+    font-family: "Dancing Script";
     font-size: 20px;
     font-weight: bold;
     color: white;
