--- a/style.css
+++ b/style.css
@@ -161,17 +161,19 @@ body {
     padding: 10px 20px;
     width: 100%;
     margin-left: -10px;
+    margin-top: -5px;
 }
 
 /* Brand Name (Text Button) */
 .navbar .brand-name {
     font-family: "Dancing Script";
-    font-size: 20px;
     font-weight: bold;
     color: white;
     text-decoration: none;
     padding: 10px 15px;
     transition: color 0.3s, background-color 0.3s;
+    margin-left: -20px;
+    font-size: clamp(minpx, 3vw, maxpx);
 }
 
 /* Hover Effect */
@@ -186,14 +188,16 @@ body {
     display: flex;
     gap: 15px;
     font-family: "Dancing Script";
+    font-size: clamp(minpx, 3vw, maxpx);
 }
 
 /* Menu Links */
 .navbar a {
     color: white;
     text-align: center;
-    padding: 14px 20px;
+    padding: 20px 10px;
     text-decoration: none;
+    font-size: clamp(minpx, 3vw, maxpx);
 }
 
 /* Active Link */
